Large Artifacts in Eevee when changing screen size #67342

Closed
opened 2019-07-20 19:06:05 +02:00 by Simon I. · 5 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: AMD Radeon(TM) 530 ATI Technologies Inc. 4.5.13547 Core Profile Context 25.20.15027.9004

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-18 14:52, hash: 38d4483c6a (Release Candidate 2)

Short description of error
grafik.png
When changing the screen size of the Blender window by toggling to full screen or by adjusting the main window's size, the realtime viewport (Eevee) displays strange colourfol artifacts all across the viewport. The artifacts are either visible for just a fraction of a second or disappear when I rotate the view.

Exact steps for others to reproduce the error

  • Open the Blender 2.80 demo file "Wanderer" by Daniel Bystedt from https://download.blender.org/demo/eevee/wanderer/wanderer.blend
  • Switch to camera view by pressing Numpad-0
  • Let the animation play for a few seconds, pause it
  • From the main windows top bar menu select "Window" -> "Toggle Window Fullscreen", toggle a few times (~4x) until artifacts appear
  • As of now I could reproduce this behavior only with this specific file
**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: AMD Radeon(TM) 530 ATI Technologies Inc. 4.5.13547 Core Profile Context 25.20.15027.9004 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-18 14:52, hash: `38d4483c6a` (Release Candidate 2) **Short description of error** ![grafik.png](https://archive.blender.org/developer/F7620760/grafik.png) When changing the screen size of the Blender window by toggling to full screen or by adjusting the main window's size, the realtime viewport (Eevee) displays strange colourfol artifacts all across the viewport. The artifacts are either visible for just a fraction of a second or disappear when I rotate the view. **Exact steps for others to reproduce the error** - Open the Blender 2.80 demo file "Wanderer" by Daniel Bystedt from https://download.blender.org/demo/eevee/wanderer/wanderer.blend - Switch to camera view by pressing Numpad-0 - Let the animation play for a few seconds, pause it - From the main windows top bar menu select "Window" -> "Toggle Window Fullscreen", toggle a few times (~4x) until artifacts appear - As of now I could reproduce this behavior only with this specific file
Author

Added subscriber: @Simon_I

Added subscriber: @Simon_I

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Clément Foucault was assigned by Germano Cavalcante 2019-07-22 21:04:17 +02:00

I can confirm.
It is related to Depth of Field.
Here is a simplified file:
DoF_glitch.blend

Open the file;
Go to the Eevee;
Zoom in or zoom out.

I can confirm. It is related to Depth of Field. Here is a simplified file: [DoF_glitch.blend](https://archive.blender.org/developer/F7623423/DoF_glitch.blend) Open the file; Go to the Eevee; Zoom in or zoom out.

This issue was referenced by f9ef0e1bde

This issue was referenced by f9ef0e1bdece674e40e219b896540fb8096c25a2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67342
No description provided.