Fix T67342 EEVEE: Uninitialized buffer when changing screen size

Was caused by some drawcall not being done if the volumetric resolve pass
was drawn (using dual source blending seems to be the cause).
Not sure why this is needed since it is still reset before the next
drawcall.